--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
@@ -4,9 +4,9 @@
             <transition-group name="sw-customer-fade" mode="out-in">
                 {% block sw_customer_detail_base_form_card %}
                     <sw-card :title="$tc('sw-customer.detailBase.labelAccountCard')"
-                             v-if="editMode"
+                             v-if="createMode"
                              :isLoading="customer.isLoading"
-                             key="edit">
+                             key="create">
                         {% block sw_customer_detail_base_form %}
                             <sw-customer-base-form :customer="customer"
                                                    :salesChannels="salesChannels"
@@ -18,48 +18,26 @@
                 {% endblock %}
 
                 {% block sw_customer_detail_base_info_holder %}
-                    <div v-if="!editMode" key="info" class="sw-customer-detail-base__info-holder">
+                    <div v-if="!createMode"
+                         key="info"
+                         class="sw-customer-detail-base__info-holder">
 
                         {% block sw_customer_detail_base_info_card %}
-                            <sw-user-card :title="$tc('sw-customer.detailBase.labelAccountCard')"
-                                          :user="customer"
-                                          :isLoading="customer.isLoading">
-
-                                {% block sw_customer_detail_base_info_card_actions %}
-                                    <template slot="actions">
-                                        {% block sw_customer_detail_base_info_action_edit %}
-                                            <sw-button size="small" @click="onActivateCustomerEditMode">
-                                                <sw-icon name="small-pencil" small></sw-icon>
-                                                {{ $tc('sw-customer.detailBase.buttonEdit') }}
-                                            </sw-button>
-                                        {% endblock %}
-
-                                        {% block sw_customer_detail_base_info_action_change_password %}
-                                            <sw-button size="small" disabled>
-                                                <sw-icon name="default-lock-key" small></sw-icon>
-                                                {{ $tc('sw-customer.detailBase.buttonChangePassword') }}
-                                            </sw-button>
-                                        {% endblock %}
-                                    </template>
-                                {% endblock %}
-
-                                {% block sw_customer_detail_base_customer_active_field %}
-                                    <sw-field slot="metadata-additional"
-                                              class="sw-customer-detail-base__active-field"
-                                              type="checkbox"
-                                              :label="$tc('sw-customer.detailBase.labelAccountActiveField')"
-                                              v-model="customer.active">
-                                    </sw-field>
-                                {% endblock %}
-
+                            <sw-customer-card :title="$tc('sw-customer.detailBase.labelAccountCard')"
+                                              :customer="customer"
+                                              :editMode="editMode"
+                                              :isLoading="customer.isLoading">
                                 {% block sw_customer_detail_base_info_metadata %}
                                     <sw-customer-base-info @activateCustomerEditMode="onActivateCustomerEditMode"
+                                                           :customerEditMode="editMode"
                                                            :customerName="customerName"
+                                                           :customerGroups="customerGroups"
+                                                           :paymentMethods="paymentMethods"
+                                                           :languages="languages"
                                                            :customer="customer">
                                     </sw-customer-base-info>
                                 {% endblock %}
-
-                            </sw-user-card>
+                            </sw-customer-card>
                         {% endblock %}
 
                         {% block sw_customer_detail_base_default_addresses_card %}
@@ -68,7 +46,7 @@
                                      class="sw-customer-detail-base__default-addresses"
                                      :isLoading="customer.isLoading">
                                 {% block sw_customer_detail_base_default_addresses %}
-                                    <sw-customer-default-addresses :customer="customer" slot="grid"></sw-customer-default-addresses>
+                                    <sw-customer-default-addresses :customerEditMode="customerEditMode" :customer="customer" slot="grid"></sw-customer-default-addresses>
                                 {% endblock %}
                             </sw-card>
                         {% endblock %}
