--- a/Resources/administration/src/app/component/base/sw-address/sw-address.html.twig
+++ b/Resources/administration/src/app/component/base/sw-address/sw-address.html.twig
@@ -4,6 +4,11 @@
         {% block sw_address_headline %}
             <div class="sw-address__headline" v-if="headline">
                 {{ headline }}
+                <router-link v-if="showEditButton"
+                             class="sw-address-headline-link"
+                             :to="{ name: 'sw.customer.detail.addresses', params: { id: $route.params.id }, query: { detailId: address.id } }">
+                    {{ $tc('global.sw-address.edit') }}
+                </router-link>
             </div>
         {% endblock %}
 
