NEXT-1775 - Remove redundant icon-sizing attribute

--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -73,7 +73,7 @@
                             <template v-else>
                                 {% block sw_media_upload_regular_caption %}
                                     <div class="sw-media-upload__upload-caption">
-                                        <sw-icon name="default-action-cloud-upload" medium></sw-icon>
+                                        <sw-icon name="default-action-cloud-upload"></sw-icon>
                                         {{ $tc('global.sw-media-upload.caption') }}
                                     </div>
                                 {% endblock %}
