--- a/Resources/administration/src/app/component/media/sw-media-modal-duplicate-media/sw-media-modal-duplicate-media.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-duplicate-media/sw-media-modal-duplicate-media.html.twig
@@ -67,42 +67,29 @@
 
         {% block sw_media_modal_duplicate_media_footer %}
             <template slot="modal-footer">
-                <sw-container columns="1fr 1fr" align="center">
+                {% block sw_media_modal_duplicate_media_save_selection %}
+                    <sw-field v-if="additionalErrorCount > 0"
+                              class="sw-media-modal-duplicate-media__additional-error-count"
+                              type="checkbox"
+                              v-model="shouldSaveSelection"
+                              :label="$tc('global.sw-media-modal-duplicate-media.labelSaveSelection', additionalErrorCount)">
+                    </sw-field>
+                {% endblock %}
 
-                    {% block sw_media_modal_duplicate_media_right_left_container %}
-                    <div class="sw-media-modal-duplicate-media__left_footer">
+                {% block sw_media_modal_duplicate_media_cancel_button %}
+                    <sw-button @click="closeModal" size="small">
+                        {{ $tc('global.sw-media-modal-duplicate-media.buttonCancel') }}
+                    </sw-button>
+                {% endblock %}
 
-                        {% block sw_media_modal_duplicate_media_save_selection %}
-                            <sw-field v-if="additionalErrorCount > 0"
-                                      type="checkbox"
-                                      v-model="shouldSaveSelection"
-                                      :label="$tc('global.sw-media-modal-duplicate-media.labelSaveSelection', additionalErrorCount)">
-                            </sw-field>
-                        {% endblock %}
-                    </div>
-                    {% endblock %}
-
-
-                    {% block sw_media_modal_duplicate_media_right_footer_container %}
-                    <div class="sw-media-modal-duplicate-media__right_footer">
-
-                        {% block sw_media_modal_duplicate_media_cancel_button %}
-                            <sw-button @click="closeModal" size="small">
-                                {{ $tc('global.sw-media-modal-duplicate-media.buttonCancel') }}
-                            </sw-button>
-                        {% endblock %}
-
-                        {% block sw_media_modal_duplicate_media_upload_button %}
-                            <sw-button class="sw-media-modal-duplicate-media__upload"
-                                       @click="solveDuplicate"
-                                       size="small"
-                                       variant="primary">
-                                {{ buttonLabel }}
-                            </sw-button>
-                        {% endblock %}
-                    </div>
-                    {% endblock %}
-                </sw-container>
+                {% block sw_media_modal_duplicate_media_upload_button %}
+                    <sw-button class="sw-media-modal-duplicate-media__upload"
+                               @click="solveDuplicate"
+                               size="small"
+                               variant="primary">
+                        {{ buttonLabel }}
+                    </sw-button>
+                {% endblock %}
             </template>
         {% endblock %}
     </sw-modal>
