fix $attr bind in sw-field

--- a/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
@@ -8,5 +8,6 @@
            @keydown.up="increaseNumberByStep"
            @keydown.down="decreaseNumberByStep"
            @change="onChange"
+           v-bind="$attrs"
            v-model="currentValue"/>
 {% endblock %}
