--- a/Resources/administration/src/app/component/form/sw-text-field/sw-text-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-text-field/sw-text-field.html.twig
@@ -25,6 +25,7 @@
                                @change="onChange"
                                @input="onInput"
                                v-on="additionalEventListeners"
+                               v-bind="$attrs"
                                :value="currentValue" />
                     {% endblock %}
 
