NEXT-1748 - After id category sorting

--- a/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
@@ -1,5 +1,6 @@
 {% block sw_category_tree %}
     <sw-tree class="sw-category-tree"
+        after-id-property="afterCategoryId"
         :items="categories"
         :sortable="true"
         :searchable="false"
