NEXT-1493 - Add test for nested conditions

--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -4,6 +4,7 @@
             <div class="sw-condition-and-container__condition-content">
                 {% block sw_condition_container_children %}
                     <div v-for="(child, index) in sortedChildren"
+                         :class="'sw-condition-container__and-child--' + index"
                          :key="index">
                         {% block sw_condition_container_children_spacer %}
                             <div v-if="index"
