--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
@@ -31,10 +31,10 @@
                             <sw-icon name="small-more" decorative></sw-icon>
                         </button>
                     </template>
-                    <sw-context-menu-item @click="$emit('create-before', condition)">
+                    <sw-context-menu-item class="sw-rule-list__create-before-action" @click="$emit('create-before', condition)">
                         {{ $tc('global.sw-condition.condition.createBefore') }}
                     </sw-context-menu-item>
-                    <sw-context-menu-item @click="$emit('create-after', condition)">
+                    <sw-context-menu-item class="sw-rule-list__create-after-action" @click="$emit('create-after', condition)">
                         {{ $tc('global.sw-condition.condition.createAfter') }}
                     </sw-context-menu-item>
                     <sw-context-menu-item @click="$emit('delete-condition', condition)"
