--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
@@ -11,14 +11,14 @@
                   name="fromDate"
                   :config="datepickerConfig"
                   v-model="fromDate"
-                  class="field field--main field--date has--arrow">
+                  class="field field--main field--date field--from-date has--arrow">
         </sw-field>
         <sw-field type="date"
                   :dateType="condition.value.useTime ? 'datetime' : 'date'"
                   name="toDate"
                   :config="datepickerConfig"
                   v-model="toDate"
-                  class="field field--main field--date">
+                  class="field field--main field--date field--to-date">
         </sw-field>
     {% endblock %}
 {% endblock %}
