--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
@@ -4,12 +4,12 @@
                    name="id"
                    :id="condition.id"
                    :required="true"
-                   class="field field--select field--main has--arrow"
+                   class="field field--select field--select-product field--main has--arrow"
                    v-model="condition.value.id">
         </sw-select>
     {% endblock %}
     {% block sw_condition_fields_operator %}
-        <sw-condition-operator-select operatorSetName="number"
+        <sw-condition-operator-select class="field--select-operator" operatorSetName="number"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
