Add property dateType to sw-datepicker to avoid conflicts with sw-field

--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -87,6 +87,7 @@
 
             {% block sw_customer_base_form_birthday_field %}
                 <sw-field type="date"
+                          dateType="date"
                           :label="$tc('sw-customer.baseForm.labelBirthday')"
                           name="birthday"
                           v-model="customer.birthday">
