--- a/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
@@ -5,7 +5,8 @@
             <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
 
                 {% block sw_product_settings_form_create_date_field %}
-                    <sw-field type="datetime"
+                    <sw-field type="date"
+                              dateType="datetime"
                               :label="$tc('sw-product.settingsForm.labelCreatedAt')"
                               :placeholder="$tc('sw-product.settingsForm.placeholderCreatedAt')"
                               v-model="product.createdAt">
@@ -13,7 +14,8 @@
                 {% endblock %}
 
                 {% block sw_product_settings_form_release_date_field %}
-                    <sw-field type="datetime"
+                    <sw-field type="date"
+                              dateType="datetime"
                               :label="$tc('sw-product.settingsForm.labelReleaseDate')"
                               :placeholder="$tc('sw-product.settingsForm.placeholderReleaseDate')"
                               v-model="product.releaseDate">
