NEXT-1876 - Add store login status component

--- a/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.html.twig
+++ b/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.html.twig
@@ -51,6 +51,8 @@
         </sw-tabs>
         {% endblock %}
 
+        <sw-plugin-store-login-status></sw-plugin-store-login-status>
+
         {% block sw_plugin_manager_content_view %}
         <router-view :searchTerm="searchTerm"></router-view>
         {% endblock %}
